--- a/main_experience.htm
+++ b/main_experience.htm
@@ -211,7 +211,9 @@ Projects as PI or Co-PI (Raised in total ~12 million EUR for my team):</span></b
 	Fellow project </font></span></b><span lang="EN-US" style="color: black">
 	<font size="4">(2016.01.01-2019.12.31): </font></span><span lang="EN-US">
 	<font size="4">Facial Behaviour Analysis ''in-the-wild''. (<b>PI: Guoying Zhao</b>, 
-	Fidipro Fellow: Prof. Stefanos Zafeiriou)</font></span></li>
+	Fidipro Fellow: Prof. Stefanos Zafeiriou). </font></span>
+	<font size="4"><span style="color: black">Total appropriation: 900 000&#8364;.<b> </b></span>
+	</font></li>
 	<li>
 	<p class="MsoListParagraphCxSpMiddle" style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 20.9pt; margin-bottom:0cm">
 	<span lang="EN-US" style="color: black"><font size="4">Four-year<b> Academy 
