--- a/teammembers.htm
+++ b/teammembers.htm
@@ -34,10 +34,10 @@ span.contentpasted0
 	<tr>
 		<td height="0" align="center" valign="top" width="209">
 		<img border="0" src="Qing.jpg" width="132" height="165"></td>
-		<td width="226" height="0" align="center" valign="top">
-		<img border="0" src="Jukka.jpg" width="148" height="162"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
+		<td height="0" align="center" valign="top" width="209">
+		<img border="0" src="Yante.jpg"></td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
@@ -50,40 +50,35 @@ span.contentpasted0
 		&nbsp;<p style="text-align: center">
 		<b><span lang="zh-cn">Academy Research Fellow</span></b><p style="text-align: center">
 		&nbsp;</td>
-		<td width="226" height="0" align="center" valign="top">
-		<font face="Times New Roman"><b>Dr. Jukka KOMULAINEN</b></font><p>&nbsp;</p>
-		<p style="text-align: center"><b>
-		<span class="HwtZe" jsaction="mouseup:Sxi9L,BR6jm; mousedown:qjlr0e" jsname="jqKxS" lang="en">
-		<span jsaction="agoMJf:PFBcW;MZfLnc:P7O7bd;nt4Alf:pvnm0e,pfE8Hb,PFBcW;B01qod:dJXsye;H1e5u:iXtTIf;lYIUJf:hij5Wb;bmeZHc:iURhpf;Oxj3Xe:qAKMYb,yaf12d" jsname="txFAF" class="jCAhz ChMk0b" jscontroller="Gn4SMb">
-		<span class="ryNqvb" jsaction="click:E6Tfl,GFf3ac,tMZCfe; contextmenu:Nqw7Te,QP7LD; mouseout:Nqw7Te; mouseover:E6Tfl,c2aHje" jsname="W297wb">
-		University lecturer</span></span></span></b><font face="Times New Roman"><b> </b></font></td>
 		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
+		<td height="0" align="center" valign="top" width="209">
+		<b>
+		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Yante.jpg"></td>
-		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Kejuan.jpg"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Licai.jpg"></td>
+		<td height="0" align="center" valign="top" width="209">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="224">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="209">
-		<b>
-		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
-		<td height="0" align="center" valign="top" width="209">
-		<b><font face="Times New Roman">Dr. Kejuan YUE</font></b></td>
 		<td height="0" align="center" valign="top" width="224">
 		<b><span lang="en-us">Dr. Licai SUN</span></b></td>
+		<td height="0" align="center" valign="top" width="209">
+		<font face="Times New Roman"><b>Dr. Hui W<span lang="zh-cn">EI</span></b></font></td>
+		<td height="0" align="center" valign="top" width="224">
+		<font face="Times New Roman"><b>Dr. Keira B<span lang="zh-cn">AI</span></b></font></td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
@@ -96,24 +91,18 @@ span.contentpasted0
 		candidates</span></u>:</b></font></td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="209">
-		<img border="0" src="Abdu.jpg" width="131" height="147"></td>
-		<td height="0" align="center" valign="top" width="224">
-		<img border="0" src="Tuomas.jpg"></td>
 		<td width="222" height="0" align="center" valign="top">
 		<img border="0" src="Atif.jpg"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Hui.jpg"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Marko.jpg"></td>
+		<td height="0" align="center" valign="top" width="225">
+		<img border="0" src="Mengting.jpg"></td>
+		<td height="0" align="center" valign="top" width="225">
+		　<img border="0" src="Haotian.jpg"></td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="209">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Abdelrahman MOSTAFA</font></b></td>
-		<td height="0" align="center" valign="top" width="224">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
-		<font face="Times New Roman">Mr. Tuomas VARANKA</font></b></td>
 		<td width="222" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Atif SHAH</font></b></td>
@@ -123,20 +112,6 @@ span.contentpasted0
 		<td width="226" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Marko SAVIC</font></b></td>
-	</tr>
-	<tr>
-		<td height="0" align="center" valign="top" width="225">
-		<img border="0" src="Mengting.jpg"></td>
-		<td height="0" align="center" valign="top" width="225">
-		　<img border="0" src="Haotian.jpg"></td>
-		<td height="0" align="center" valign="top" width="225">
-		<img alt="Huai-Qian Khor" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=bjnCB84AAAAJ&citpid=1" id="gsc_prf_pup-img4" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 256w" width="137" height="142"></td>
-		<td height="0" align="center" valign="top" width="225">
-		<img border="0" src="Ali.jpg" width="132" height="150"></td>
-		<td height="0" align="center" valign="top" width="225">
-		<img border="0" src="Hao.jpg" width="155" height="155"></td>
-	</tr>
-	<tr>
 		<td height="0" align="center" valign="top" width="225">
 		<p style="text-align: center; ">
 		<b>
@@ -145,6 +120,20 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="225">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Mr. Haotian LIU</b></font></td>
+	</tr>
+	<tr>
+		<td height="0" align="center" valign="top" width="225">
+		<img alt="Huai-Qian Khor" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=bjnCB84AAAAJ&citpid=1" id="gsc_prf_pup-img4" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 256w" width="137" height="142"></td>
+		<td height="0" align="center" valign="top" width="225">
+		<img border="0" src="Ali.jpg" width="132" height="150"></td>
+		<td height="0" align="center" valign="top" width="225">
+		<img border="0" src="Hao.jpg" width="155" height="155"></td>
+		<td width="226" height="0" align="center" valign="top">
+		<img src="https://media.licdn.com/dms/image/v2/D4E03AQG4_shUiphxtA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1692620457145?e=2147483647&v=beta&t=asArQ7bK-aAq8UKeePZNzrtG7J6rX2U20z5tVZIgSd4" jsaction class="sFlh5c FyHeAf iPVvYb" style="max-width: 200px; width: 145px; height: 149px; margin: 0px" alt="Samuel Boccara - Courbevoie, Île-de-France, France | Profil ..." jsname="kn3ccd" aria-hidden="false"></td>
+		<td height="0" align="center" valign="top" width="184">
+		　<img border="0" src="Arto.jpg" width="113" height="156"></td>
+	</tr>
+	<tr>
 		<td width="222" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b><span lang="zh-cn">Mr. </span>Huai-Qian K</b></font><span lang="en-us"><b>HOR</b></span></td>
@@ -154,30 +143,36 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="225">
 		<font face="Times New Roman"><b>Mr. Hao Y</b></font><span lang="en-us"><b><font face="Times New Roman">U</font></b></span><p style="text-align: center">
 		<span lang="en-us"><b>(ELLIS PhD student)</b></span></td>
-	</tr>
-	<tr>
-		<td width="223" height="0" align="center" valign="top">
-		<img border="0" src="Boyi.jpg" width="153" height="154"></td>
-		<td width="226" height="0" align="center" valign="top">
-		<img src="https://media.licdn.com/dms/image/v2/D4E03AQG4_shUiphxtA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1692620457145?e=2147483647&v=beta&t=asArQ7bK-aAq8UKeePZNzrtG7J6rX2U20z5tVZIgSd4" jsaction class="sFlh5c FyHeAf iPVvYb" style="max-width: 200px; width: 145px; height: 149px; margin: 0px" alt="Samuel Boccara - Courbevoie, Île-de-France, France | Profil ..." jsname="kn3ccd" aria-hidden="false"></td>
-		<td height="0" align="center" valign="top" width="184">
-		　<img width="145" src="https://media.licdn.com/dms/image/v2/C4D03AQF8DmVq7l3Raw/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1629272312741?e=1752710400&v=beta&t=FgLzyfsXYfQr-5PKqPLcPuR5E_ilkrN06NYHeECLGm8" loading="lazy" height="145" alt="View Arto Apila’s  graphic link" id="ember396" class="ivm-view-attr__img--centered EntityPhoto-circle-3  update-components-actor__avatar-image evi-image lazy-image ember-view"></td>
-		<td height="0" align="center" valign="top" width="224">
-		<img border="0" src="Boshra.jpg" width="145" height="156"></td>
-		<td height="0" align="center" valign="top" width="224">
-		&nbsp;</td>
-	</tr>
-	<tr>
-		<td width="223" height="0" align="center" valign="top">
-		<font face="Times New Roman"><b>Mr. Boyi Z</b></font><span lang="en-us"><b><font face="Times New Roman">HENG</font></b></span></td>
 		<td width="226" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Mr. Samuel B<span lang="zh-cn">OCCARA</span></b></font></td>
 		<td height="0" align="center" valign="top" width="184">
 		　<font face="Times New Roman"><b>Mr. Arto APILA<span lang="zh-cn">
 		</span>(Co-supervised by Dr. Dorina Rajanen)</b></font></td>
+	</tr>
+	<tr>
+		<td height="0" align="center" valign="top" width="225">
+		<img border="0" src="Yan.jpg" width="145" height="190"></td>
+		<td height="0" align="center" valign="top" width="224">
+		<img border="0" src="Boshra.jpg" width="145" height="156"></td>
+		<td height="0" align="center" valign="top" width="184">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="224">
+		&nbsp;</td>
+	</tr>
+	<tr>
+		<td height="0" align="center" valign="top" width="225">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Mr. Yan </b></font><span lang="zh-cn">
+		<b>JIANG</b></span></td>
 		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Ms. Boshra <span lang="zh-cn">NAJARI</span></b></font><p>
 		<span lang="zh-cn"><b>(Primarily supervised by Prof. Andy Nguyen)</b></span></td>
+		<td height="0" align="center" valign="top" width="184">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="225">
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 	</tr>
@@ -187,10 +182,10 @@ span.contentpasted0
 		<font face="Times New Roman" size="4"><b><u>Research Assistants:</u></b></font></td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="225">
-		<img border="0" src="Yan.jpg" width="145" height="190"></td>
 		<td width="184" height="0" align="center" valign="top">
 		<img border="0" src="Ada.jpg" width="195" height="190" align="center"></td>
+		<td width="184" height="0" align="center" valign="top">
+		&nbsp;</td>
 		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="184" height="0" align="center" valign="top">
@@ -199,13 +194,12 @@ span.contentpasted0
 		&nbsp;</td>
 	</tr>
 	<tr>
-		<td height="0" align="center" valign="top" width="225">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-		<font face="Times New Roman"><b>Mr. Yan Jiang</b></font></td>
 		<td width="223" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Mr. Seyedata Jodeiri Seyedian </b>
 		</font></td>
+		<td width="223" height="0" align="center" valign="top">
+		&nbsp;</td>
 		<td width="223" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="223" height="0" align="center" valign="top">
@@ -226,7 +220,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
-		&nbsp;</td>
+		<img border="0" src="Mark.jpg" width="168" height="161"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 	</tr>
@@ -244,18 +238,29 @@ span.contentpasted0
 		<p>
 		<font face="Times New Roman">Doctoral researcher<br>
 		<br>
-		Julius-Maximilians-Universität Würzburg<span lang="zh-cn">, Germany</span></font></td>
+		Julius-Maximilians-Universität Würzburg<span lang="zh-cn">, Germany</span></font><p>
+		<span lang="zh-cn">Aug. 2025 - Oct. 2025</span></td>
 		<td height="0" align="center" valign="top" width="225">
-		<b><font face="Times New Roman"><span lang="zh-cn">Dr. </span>Luu Tu 
-		Nguyen</font></b></td>
+		<span lang="zh-cn"><b><font face="Times New Roman">Mr</font></b></span><b><font face="Times New Roman"><span lang="zh-cn">. </span>Luu Tu 
+		Nguyen</font></b><p><span lang="zh-cn"><b>&nbsp;&nbsp; </b></span></p>
+		<p><span lang="zh-cn"><b>&nbsp;&nbsp;&nbsp; Visiting researcher</b></span></p>
+		<p>&nbsp;</p>
+		<p><span data-teams="true">VNU University of Engineering and Technology</span><p>&nbsp;<p style="text-align: center">
+		<span lang="zh-cn">
+		<mark class="QVRyCf">
+		Aug. - Dec. 2025</mark></span></td>
 		<td height="0" align="center" valign="top" width="184">
-		<p><b><font face="Times New Roman"><span lang="zh-cn">&nbsp;Prof. </span>
-		Le Thanh Ha</font></b></p>
+		<b><span lang="zh-cn">Mr. </span>Mark<span lang="zh-cn"> </span>Adamik</b>
+		<p>&nbsp;</p>
+		<p style="text-align: center"><span lang="zh-cn">Doctoral researcher</span></p>
+		<h3 class="LC20lb MBeuO DKV0Md">
+		<span data-huuid="9982943759158199878" style="font-weight: 400">
+		<font size="3">Vrije Universiteit Amsterdam</font></span></h3>
+		<p class="LC20lb MBeuO DKV0Md" style="text-align: center">
+		<span lang="zh-cn">Sep. - Dec. 2025</span></p>
 		<p>&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
-		<p class="MsoNormal"><b><font face="Times New Roman">Prof. Nguyen Thanh 
-		Thuy&nbsp;</font></b></p>
-&nbsp;</td>
+		&nbsp;</td>
 	</tr>
 	</table>
 <p class="title" style="margin-top:1cm; margin-bottom:9pt">
@@ -520,7 +525,11 @@ span.contentpasted0
 		<td width="226" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="397">
-		&nbsp;</td>
+		<p class="MsoNormal" style="text-align: center"><b><font face="Times New Roman">
+		Prof. Nguyen Thanh Thuy&nbsp;</font></b></p>
+&nbsp;<p style="text-align: center"><span data-teams="true">VNU University of 
+		Engineering and Technology</span><p style="text-align: center">
+		<span lang="zh-cn">Jun. - Aug. 2025</span></td>
 	</tr>
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
@@ -529,8 +538,9 @@ span.contentpasted0
 		<b><font face="Times New Roman"><span lang="zh-cn">Prof. </span>Le Thanh 
 		Ha</font></b><p>&nbsp;</p>
 		<p><span data-huuid="9982943759158199878"><mark class="QVRyCf">
-		<span lang="zh-cn">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		</span>Vietnam National University</mark></span></td>
+		<span lang="zh-cn">&nbsp;&nbsp;&nbsp;&nbsp;</span></mark></span><span data-teams="true">VNU 
+		University of Engineering and Technology</span><p style="text-align: center">
+		<span lang="zh-cn">Jul. - Aug. 2025</span></td>
 	</tr>
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
