--- a/publications.htm
+++ b/publications.htm
@@ -150,13 +150,18 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2025 </b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;363. Marko Savic, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;36<span lang="fi">4</span>. Marko Savic, <b>Guoying Zhao</b>.
 <u>RS+rPPG: Robust Strongly Self-Supervised Learning for rPPG</u>. TCSVT, 2025.
 </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;362. Qianru Xu, Feng Vankee Lina, Yang Liu, <b>Guoying Zhao</b>. 
+<font size="4">&nbsp;36<span lang="fi">3</span>. Qianru Xu, Feng Vankee Lina, Yang Liu, <b>Guoying Zhao</b>. 
 Bridging gaps in sundown syndrome research: a systematic review and roadmap for 
 future multimodal approaches. Archives of Clinical Neuropsychology, 2025.</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4"><span lang="fi">&nbsp;362. </span>Zhaoqiang Xia, Hexiang Huang, 
+Haoyu Chen, Xiaoyi Feng, <b>Guoying Zhao</b>. Hybrid-supervised Hypergraph-enhanced 
+Transformer for Micro-gesture Based Emotion Recognition. IEEE Transactions on 
+Affective Computing. 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font size="4">&nbsp;361. Xu Cheng, Shuya Deng, Hao Yu, <b>Guoying Zhao</b>. 
 DMANet: Dual-modality alignment network for visible-infrared person 
@@ -393,8 +398,7 @@ Timofte, Luc Van Gool, <b>Guoying Zhao</b>.<span lang="fi"> </span><u>LART:
 Neural Correspondence Learning with Latent Regularization Transformer for 3D 
 Motion Transfer</u>. IEEE Conference on Neural Information Processing Systems<b> </b>(NeurIPS), 2023.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;316. Zitong Yu, 
-Yunxiao Qin, Xiaobai Li, Chenxu Zhao, Zhen Lei, and <b>Guoying Zhao</b>. <u>Deep 
+<span lang="en-us"><font face="Times New Roman" size="4">&nbsp;316. Zitong Yu, Yunxiao Qin, Xiaobai Li, Chenxu Zhao, Zhen Lei, and <b>Guoying Zhao</b>. <u>Deep 
 Learning for Face Anti-Spoofing: A Survey</u>.&nbsp; </font></span>
 <font face="Times New Roman" size="4">IEEE Transactions on Pattern Analysis and 
 Machine Intelligence journal (TPAMI). 202<span lang="en-us">3</span>.</font></p>
