--- a/teammembers.htm
+++ b/teammembers.htm
@@ -36,9 +36,9 @@ span.contentpasted0
 		<img border="0" src="Qing.jpg" width="132" height="165"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
-		<td height="0" align="center" valign="top" width="209">
+		<td height="0" align="center" valign="top" width="232">
 		<img border="0" src="Yante.jpg"></td>
-		<td height="0" align="center" valign="top" width="224">
+		<td height="0" align="center" valign="top" width="188">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
@@ -52,10 +52,10 @@ span.contentpasted0
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Dr. Qianru XU</b></font></td>
-		<td height="0" align="center" valign="top" width="209">
+		<td height="0" align="center" valign="top" width="232">
 		<b>
 		<font face="Times New Roman"><span lang="zh-cn">Dr</span>. Yante LI</font></b></td>
-		<td height="0" align="center" valign="top" width="224">
+		<td height="0" align="center" valign="top" width="188">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
 		&nbsp;</td>
@@ -64,10 +64,10 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Licai.jpg"></td>
 		<td height="0" align="center" valign="top" width="209">
-		&nbsp;</td>
-		<td height="0" align="center" valign="top" width="224">
-		&nbsp;</td>
-		<td height="0" align="center" valign="top" width="224">
+		<img alt="Hui Wei" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=doqNS_kAAAAJ&citpid=10" id="gsc_prf_pup-img5" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=doqNS_kAAAAJ&amp;citpid=10 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=doqNS_kAAAAJ&amp;citpid=10 256w" width="136" height="138"></td>
+		<td height="0" align="center" valign="top" width="232">
+		<img src="https://www.canberra.edu.au/content/dam/uc/imagery/services/3mt/keira-bai%20.jpg" jsaction class="sFlh5c FyHeAf iPVvYb" style="max-width: 1000px; width: 139px; height: 136px; margin: 0px" alt="Three Minute Thesis Competition 2023 - University of Canberra" jsname="kn3ccd"></td>
+		<td height="0" align="center" valign="top" width="188">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
@@ -77,9 +77,9 @@ span.contentpasted0
 		<b><span lang="en-us">Dr. Licai SUN</span></b></td>
 		<td height="0" align="center" valign="top" width="209">
 		<font face="Times New Roman"><b>Dr. Hui W<span lang="zh-cn">EI</span></b></font></td>
-		<td height="0" align="center" valign="top" width="224">
+		<td height="0" align="center" valign="top" width="232">
 		<font face="Times New Roman"><b>Dr. Keira B<span lang="zh-cn">AI</span></b></font></td>
-		<td height="0" align="center" valign="top" width="224">
+		<td height="0" align="center" valign="top" width="188">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="222">
 		&nbsp;</td>
@@ -95,9 +95,9 @@ span.contentpasted0
 		<img border="0" src="Atif.jpg"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Hui.jpg"></td>
-		<td width="226" height="0" align="center" valign="top">
+		<td width="232" height="0" align="center" valign="top">
 		<img border="0" src="Marko.jpg"></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="188">
 		<img border="0" src="Mengting.jpg"></td>
 		<td height="0" align="center" valign="top" width="225">
 		　<img border="0" src="Haotian.jpg"></td>
@@ -109,10 +109,10 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="224">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><font face="Times New Roman"><b>Ms. 
 		H</b></font><b><font face="Times New Roman">ui&nbsp; KUURILA-ZHANG</font></b></td>
-		<td width="226" height="0" align="center" valign="top">
+		<td width="232" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm"><b>
 		<font face="Times New Roman">Mr. Marko SAVIC</font></b></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="188">
 		<p style="text-align: center; ">
 		<b>
 		<font face="Times New Roman">Ms. Mengting WEI</font></b><p>
@@ -126,12 +126,12 @@ span.contentpasted0
 		<img alt="Huai-Qian Khor" sizes="print 80px,128px" src="https://scholar.googleusercontent.com/citations?view_op=view_photo&user=bjnCB84AAAAJ&citpid=1" id="gsc_prf_pup-img4" srcset="https://scholar.googleusercontent.com/citations?view_op=view_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 128w,https://scholar.googleusercontent.com/citations?view_op=medium_photo&amp;user=bjnCB84AAAAJ&amp;citpid=1 256w" width="137" height="142"></td>
 		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Ali.jpg" width="132" height="150"></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="232">
 		<img border="0" src="Hao.jpg" width="155" height="155"></td>
-		<td width="226" height="0" align="center" valign="top">
+		<td width="188" height="0" align="center" valign="top">
 		<img src="https://media.licdn.com/dms/image/v2/D4E03AQG4_shUiphxtA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1692620457145?e=2147483647&v=beta&t=asArQ7bK-aAq8UKeePZNzrtG7J6rX2U20z5tVZIgSd4" jsaction class="sFlh5c FyHeAf iPVvYb" style="max-width: 200px; width: 145px; height: 149px; margin: 0px" alt="Samuel Boccara - Courbevoie, Île-de-France, France | Profil ..." jsname="kn3ccd" aria-hidden="false"></td>
 		<td height="0" align="center" valign="top" width="184">
-		　<img border="0" src="Arto.jpg" width="113" height="156"></td>
+		　<img border="0" src="Arto.jpg" width="109" height="148"></td>
 	</tr>
 	<tr>
 		<td width="222" height="0" align="center" valign="top">
@@ -140,10 +140,10 @@ span.contentpasted0
 		<td width="226" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b><span lang="zh-cn">Mr. </span>Ali S</b></font><span lang="en-us"><b>ALAR</b></span></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="232">
 		<font face="Times New Roman"><b>Mr. Hao Y</b></font><span lang="en-us"><b><font face="Times New Roman">U</font></b></span><p style="text-align: center">
 		<span lang="en-us"><b>(ELLIS PhD student)</b></span></td>
-		<td width="226" height="0" align="center" valign="top">
+		<td width="188" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Mr. Samuel B<span lang="zh-cn">OCCARA</span></b></font></td>
 		<td height="0" align="center" valign="top" width="184">
 		　<font face="Times New Roman"><b>Mr. Arto APILA<span lang="zh-cn">
@@ -154,9 +154,9 @@ span.contentpasted0
 		<img border="0" src="Yan.jpg" width="145" height="190"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Boshra.jpg" width="145" height="156"></td>
-		<td height="0" align="center" valign="top" width="184">
+		<td height="0" align="center" valign="top" width="232">
 		&nbsp;</td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="188">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
@@ -169,9 +169,9 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Ms. Boshra <span lang="zh-cn">NAJARI</span></b></font><p>
 		<span lang="zh-cn"><b>(Primarily supervised by Prof. Andy Nguyen)</b></span></td>
-		<td height="0" align="center" valign="top" width="184">
+		<td height="0" align="center" valign="top" width="232">
 		&nbsp;</td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="188">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
@@ -186,9 +186,9 @@ span.contentpasted0
 		<img border="0" src="Ada.jpg" width="195" height="190" align="center"></td>
 		<td width="184" height="0" align="center" valign="top">
 		&nbsp;</td>
-		<td width="224" height="0" align="center" valign="top">
+		<td width="232" height="0" align="center" valign="top">
 		&nbsp;</td>
-		<td width="184" height="0" align="center" valign="top">
+		<td width="188" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
@@ -200,9 +200,9 @@ span.contentpasted0
 		</font></td>
 		<td width="223" height="0" align="center" valign="top">
 		&nbsp;</td>
-		<td width="223" height="0" align="center" valign="top">
+		<td width="232" height="0" align="center" valign="top">
 		&nbsp;</td>
-		<td width="223" height="0" align="center" valign="top">
+		<td width="188" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
@@ -217,9 +217,9 @@ span.contentpasted0
 		　<img border="0" src="Yushun.jpg" width="159" height="160"></td>
 		<td height="0" align="center" valign="top" width="225">
 		<img border="0" src="Jens.jpg" width="119" height="162"></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="232">
 		&nbsp;</td>
-		<td height="0" align="center" valign="top" width="184">
+		<td height="0" align="center" valign="top" width="188">
 		<img border="0" src="Mark.jpg" width="168" height="161"></td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
@@ -231,7 +231,7 @@ span.contentpasted0
 		<font face="Times New Roman">Doctoral student</font></p>
 		<p>
 		<font face="Times New Roman">Southeast University</font></p>
-		<p><font face="Times New Roman">Oct. 2023 - Sep. 2025</font></p></td>
+		<p><font face="Times New Roman">Oct. 2023 - <span lang="zh-cn">Oct</span>. 2025</font></p></td>
 		<td height="0" align="center" valign="top" width="225">
 		<b><font face="Times New Roman">Mr. Jens GEBELE </font> </b>
 		<p>&nbsp;</p>
@@ -240,24 +240,26 @@ span.contentpasted0
 		<br>
 		Julius-Maximilians-Universität Würzburg<span lang="zh-cn">, Germany</span></font><p>
 		<span lang="zh-cn">Aug. 2025 - Oct. 2025</span></td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="232">
 		<span lang="zh-cn"><b><font face="Times New Roman">Mr</font></b></span><b><font face="Times New Roman"><span lang="zh-cn">. </span>Luu Tu 
 		Nguyen</font></b><p><span lang="zh-cn"><b>&nbsp;&nbsp; </b></span></p>
-		<p><span lang="zh-cn"><b>&nbsp;&nbsp;&nbsp; Visiting researcher</b></span></p>
+		<p style="text-align: left"><span lang="zh-cn"><b>&nbsp;&nbsp;Visiting researcher</b></span></p>
 		<p>&nbsp;</p>
-		<p><span data-teams="true">VNU University of Engineering and Technology</span><p>&nbsp;<p style="text-align: center">
-		<span lang="zh-cn">
+		<p><span data-teams="true">VNU University of Engineering and Technology</span><p>&nbsp;<h3 class="LC20lb MBeuO DKV0Md">
 		<mark class="QVRyCf">
-		Aug. - Dec. 2025</mark></span></td>
-		<td height="0" align="center" valign="top" width="184">
+		<span data-huuid="9982943759158199878">
+		<font size="3"><span style="font-weight: 400">Aug. - Dec. 2025</span></font></span></mark></h3>
+		</td>
+		<td height="0" align="center" valign="top" width="188">
 		<b><span lang="zh-cn">Mr. </span>Mark<span lang="zh-cn"> </span>Adamik</b>
 		<p>&nbsp;</p>
 		<p style="text-align: center"><span lang="zh-cn">Doctoral researcher</span></p>
 		<h3 class="LC20lb MBeuO DKV0Md">
 		<span data-huuid="9982943759158199878" style="font-weight: 400">
 		<font size="3">Vrije Universiteit Amsterdam</font></span></h3>
-		<p class="LC20lb MBeuO DKV0Md" style="text-align: center">
-		<span lang="zh-cn">Sep. - Dec. 2025</span></p>
+		<h3 class="LC20lb MBeuO DKV0Md">
+		<span data-huuid="9982943759158199878">
+		<font size="3"><span style="font-weight: 400">Sep. - Dec. 2025</span></font></span></h3>
 		<p>&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
