--- a/personal.htm
+++ b/personal.htm
@@ -189,7 +189,7 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		Finnish Cultural Foundation for two years.</font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><span lang="en-us"><u>
 		<font face="Times New Roman">2023.11.09:<b> </b></font></u></span>
-		<font face="Times New Roman"><b>Dr. Wei Peng</b>¡¯s dissertation titled 
+		<font face="Times New Roman"><b>Dr. Wei Peng</b>'s dissertation titled 
 		&quot;Automatic neural network learning for human behavior understanding&quot; 
 		awarded </font>
 		<span style="font-size: 12.0pt; font-family: 'Times New Roman',serif; font-weight: 700">
