--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -440,7 +440,17 @@ Aug. 20-24, 2006, Hongkong.</font></span></p>
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><span style="font-family: 'Times New Roman'; font-weight: 700" lang="en-us"><u><font size="4">Invited talks:</font></u></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
-<font size="4">18th Chinese Conference on Biometric Recognition (CCBR) 2024, 
+<font size="4">ACM international joint conference on Pervasive and Ubiquitous 
+Computing (UbiComp) and the ACM International Symposium on Wearable Computing (ISWC), 
+October 12-16, 2025, Espoo, Finland</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-top: 8px; margin-bottom: 8px" class="MsoNormal">
+<font size="4">8th Workshop and Competition on Affective &amp; Behavior Analysis 
+in-the-wild (ABAW) with CVPR 2025, June 12, 2025, Nashville, USA.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-top: 8px; margin-bottom: 8px" class="MsoNormal">
+<font size="4">International Conference on Pattern Recognition (ICPR) 2024, Dec. 
+1-5, Kolkata, India.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
+18th Chinese Conferenc<font size="4">e on Biometric Recognition (CCBR) 2024, 
 Nov. 22-24, Nanjing, China.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-top: 8px; margin-bottom: 8px" class="MsoNormal">
 <font size="4">Earth &amp; Space: from Infrared to Terahertz International Conference 
@@ -584,11 +594,13 @@ ICB, CAIP, CISP, &nbsp;etc.</font></p>
 <p class="MsoNormal" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px; ">
 <b><span style="font-family: Times New Roman; font-size: 14pt">Visits:</span></b></p>
 <p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-right: -6.8pt; margin-top: 8px; margin-bottom: 8px">
-<font size="4">--&nbsp; CNS Lab, Stanford University, Sep. 2022 - Mar. 2023<span lang="en-us">.</span></font></p>
+<font size="4">--&nbsp; Prof. Fang Liu, Martinos Center, Massachusetts General 
+Hospital, Harvard University, May 31 - July 10, 2025</font></p>
 <p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-right: -6.8pt; margin-top: 8px; margin-bottom: 8px">
-<span lang="en-us"><font size="4">--&nbsp; </font></span><span lang="EN-US">
-<font size="4">Prof. Jeffrey Cohn's group in University of Pittsburgh and Carnegie Mellon 
-University (CMU), USA, from Mid. June for two weeks</font></span></p>
+<font size="4">--&nbsp; Prof. Ehsan Adeli &amp; Prof. Kilian Pohl, CNS Lab, Stanford University, Sep. 2022 - Mar. 2023.</font></p>
+<p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-right: -6.8pt; margin-top: 8px; margin-bottom: 8px">
+<font size="4">--&nbsp; Prof. Jeffrey Cohn's group in University of Pittsburgh<span lang="EN-US">
+and Carnegie Mellon University (CMU), USA, from Mid. June for two weeks</span></font></p>
 <p class="MsoNormal" style="text-align: justify; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-right: -6.8pt; margin-top: 8px; margin-bottom: 8px">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">--&nbsp; </font> </span>
