--- a/publications.htm
+++ b/publications.htm
@@ -147,10 +147,24 @@ Jan. 2018.</font></p>
 <a target="_blank" href="https://www.oulu.fi/blogs/science-with-arctic-attitude/emotion-ai">Emotion AI</a>: </font>
 <span lang="EN-US">
 <font size="4">Nov. 2020.</font></span></p>
+<p style="text-indent: 6px; margin: 6.0pt 0in" class="MsoNormal">
+<span lang="en-us"><font size="4">9. </font></span>
+<span lang="FI" style="font-family: Swiss,sans-serif">
+<a title="Academy Professor Guoying Zhao awarded 2024 Maria Petrou Prize" style="color: blue; text-decoration: underline; text-underline: single" href="https://www.helsinkitimes.fi/finland/finland-news/domestic/25861-academy-professor-guoying-zhao-awarded-2024-maria-petrou-prize.html">
+<span lang="en-FI" style="font-family: 'Times New Roman',serif"><font size="4">
+2024 Maria Petrou Prize</font></span></a></span><span lang="FI" style="font-family: 'Times New Roman',serif"><font size="4"> 
+reported Helsinki Ti</font></span><font size="4" face="Times New Roman,serif">mes, 
+Dec., 2024.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2025 </b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;36<span lang="fi">4</span>. Marko Savic, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;36<span lang="fi">4</span>. Yang 
+Merik Liu, Adam Turnbull, Ehsan Adeli, <b>Guoying Zhao</b>, Kuan Hong Wang, F. 
+Vankee Lin. <u>A Multi-Dimensional Transfer Learning Framework for Studying 
+Reward-Guided Behaviors Across Species</u>. Nature Mental Health. (in press)
+</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;364. </font><font face="Times New Roman" size="4">Marko Savic, <b>Guoying Zhao</b>.
 <u>RS+rPPG: Robust Strongly Self-Supervised Learning for rPPG</u>. TCSVT, 2025.
 </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
